Fix images size on mobile devices

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -1,3 +1,6 @@
 img.emoji {
     margin-top: -3px;
 }
+img {
+    height: 100%;
+}
